--- a/Formato_de_Data.CSS
+++ b/Formato_de_Data.CSS
@@ -29,7 +29,7 @@ img{
     height:200px;
     width: 3000PX;
 }
-.CTM_TATA{
+.Total{
     font-family: 'Lora', serif;
     font-size: 22px;
     text-align: justify;
